--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
         </div>
         <div class="navbar__s3">
         <p>Courses</p>
-        <p>My Learning</p>
+        <!-- <p>My Learning</p> -->
+         <div class ="mylearning">
+            <p>My Learning</p>
+            <div class ="mylearning__popup">
+                <p>You did not purchase anything yet</p>
+            </div>
+         </div>
         <i class="fa-solid fa-cart-shopping" style="color: #080808;"></i>
         <i class="fa-solid fa-bell" style="color: #050505;"></i>
         <i class="fa-solid fa-user" style="color: #080808;"></i>
@@ -52,6 +58,10 @@
    <!--Sale Image-->
 <div class="sale-image">
     <img src="./Sale.jpg" alt ="Sale Image">
+    <div class="sale-image__offer">
+        <h2>Udemy Flash Sale! 24 hours to save.</h2>
+        <p>Get the top courses for just 499. Just one day to save but a lifetime to learn</p>
+    </div>
 </div>
 
    <!--Recommended-->
