Updated media queries

--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
         <i class="fa-solid fa-bell" style="color: #050505;"></i>
         <i class="fa-solid fa-user" style="color: #080808;"></i>
 
-
+        </div>
+        
+        <div class ="navbar__s4">
+            <i class="fa-solid fa-bars"></i>
         </div>
     </div>
 
-    <!--Categories-->
+       <!--Categories-->
 <div class="categories">
     <p>Development</p>
     <p>Business</p>
